maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:2: error: Missing closing brace `}' assumed here
def hand(tour:Int):Int={
^PledgeMaze:2: error: expected class or object definition
def hand(tour:Int):Int={
^PledgeMaze:14: error: expected start of definition
override def run() {
         ^